# ChannelsCPP

./: .gitignore  CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/impl/: Channel.cpp  ChannelBuffer.cpp  ChannelUtility.cpp  Circular_buffer.cpp  IChannel.cpp  OChannel.cpp
src/lib/include/public/cpp/golang/channel/: Channel.h  ChannelBuffer.h  ChannelUtility.h  Circular_buffer.h  IChannel.h  OChannel.h
